<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nodes_list"
            android:icon="@drawable/ic_view_list_black_36dp"
            android:title="@string/nodes_list_view" />
        <item
            android:id="@+id/nav_smartconfig"
            android:icon="@drawable/ic_wifi_black_36dp"
            android:title="@string/smartconfig_view" />
        <item
            android:id="@+id/nav_sn_key"
            android:icon="@drawable/ic_vpn_key_black_36dp"
            android:title="@string/sn_key_view" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_36dp"
            android:title="@string/about_view" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_36dp"
                android:title="@string/setting_view"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_36dp"
                android:title="@string/logout_view"/>
        </menu>
    </item>
</menu>
