<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/apptheme_dialog_edittext"
            android:hint="@string/signin_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/apptheme_dialog_edittext"
            android:hint="@string/signin_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/switch_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/setup_switch_international"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/apptheme_dialog_edittext" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/signin_forgot_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/apptheme_dialog_edittext" />
        <!--android:textSize="?" />-->

    </LinearLayout>
</LinearLayout>