<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cc.seeed.iot.ui_setup.test">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/apptheme_blue">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerInParent="true">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginTop="8dp"
                        android:singleLine="true"
                        android:text="@string/smartconfig_connect"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textColor="@color/abc_primary_text_disable_only_material_light" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center_horizontal"
                        android:background="#81a6db" />

                    <EditText
                        android:id="@+id/ssid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="16dp"
                        android:enabled="true"
                        android:hint="@string/smartconfig_hint_SSID"
                        android:inputType="none"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/wifi_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:hint="@string/smartconfig_hint_password"
                        android:inputType="textPassword"
                        android:minWidth="300dp"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/first_time_how_to_api_key"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="24dp"
                        android:background="@color/apptheme_blue"
                        android:text="@string/smartconfig_btn_connect"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/smartconfig_tips_connect"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/primary_text_default_material_dark" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>