<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/node_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Bottom View Start-->
        <LinearLayout
            android:id="@+id/bottom_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <!--What you want to show-->
            <TextView
                android:id="@+id/api"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/bottom_2_background"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bottom_text" />

            <TextView
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/bottom_1_background"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/setting"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bottom_text" />

            <TextView
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/bottom_3_background"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/remove"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/bottom_text" />
        </LinearLayout>
        <!-- Bottom View End-->

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_node_list"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/board_img"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/link_small" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="12dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="21sp"
                tools:text="Xmas LED Tree" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="46dp">

                <!--<ImageView-->
                <!--android:layout_width="18dp"-->
                <!--android:layout_height="18dp"-->
                <!--android:src="@drawable/ic_access_time" />-->

                <!--<TextView-->
                <!--android:id="@+id/time"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_marginStart="5dp"-->
                <!--android:text="13:00, 29 Oct"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:textSize="14sp" />-->

                <ImageView
                    android:id="@+id/online_led"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/offline_led" />

                <TextView
                    android:id="@+id/online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="office"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/xserver_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="192.168.18.194"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="73dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="with:"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="14sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/grove_image_1"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/link_small"
                    app:civ_border_color="@color/primary"
                    app:civ_border_width="@dimen/civ_border_width" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/grove_image_2"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/link_small"
                    app:civ_border_color="@color/primary"
                    app:civ_border_width="@dimen/civ_border_width" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/grove_image_3"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/grove_drop"
                    app:civ_border_color="@color/primary"
                    app:civ_border_width="@dimen/civ_border_width" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/grove_image_4"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/grove_temperature"
                    app:civ_border_color="@color/primary"
                    app:civ_border_width="@dimen/civ_border_width" />

                <TextView
                    android:id="@+id/grove_over"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />

            </LinearLayout>

            <!--<ImageView-->
            <!--android:id="@+id/favorite"-->
            <!--android:layout_width="@dimen/item_image_button"-->
            <!--android:layout_height="@dimen/item_image_button"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginEnd="@dimen/item_image_button_end_margin"-->
            <!--android:layout_marginRight="@dimen/item_image_button_end_margin"-->
            <!--android:layout_marginTop="@dimen/item_image_button_top_margin"-->
            <!--android:background="?attr/selectableItemBackgroundBorderless"-->
            <!--android:scaleType="center"-->
            <!--android:src="@drawable/ic_favorite_border" />-->

            <!--<ImageView-->
            <!--android:id="@+id/dot"-->
            <!--android:layout_width="@dimen/item_image_button"-->
            <!--android:layout_height="@dimen/item_image_button"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginEnd="@dimen/item_image_button_end_margin"-->
            <!--android:layout_marginRight="@dimen/item_image_button_end_margin"-->
            <!--android:layout_marginTop="88dp"-->
            <!--android:background="?attr/selectableItemBackgroundBorderless"-->
            <!--android:scaleType="center"-->
            <!--android:src="@drawable/ic_dot" />-->
            <View
                android:id="@+id/status"
                android:layout_width="6dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                tools:background="@color/offline" />
        </RelativeLayout>
    </com.daimajia.swipe.SwipeLayout>
</LinearLayout>